# ECS-proto

./: CMakeLists.txt  ECS.pc.in
assets/spritesheets/: green.json  red.json
include/ECS/: Archetype.hpp  ArchetypeGraph.hpp  ECS.hpp  SoftDeleteContainer.hpp  Types.hpp
include/ECS/Components/: AnimatedSprite.hpp  Body.hpp  Sprite.hpp
include/ECS/Systems/: AnimatedSpriteSystem.hpp  BasicCollisionSystem.hpp  DummySystem.hpp  GravitySystem.hpp  PhysicSystem.hpp  RenderSystem.hpp  SpriteRenderSystem.hpp
src/: Archetype.cpp  Archetype.hpp  Archetype.hpp.old  ArchetypeGraph.cpp  ArchetypeGraph.hpp  CMakeLists.txt  ECS.cpp  ECS.hpp  Engine.hpp  HeterogeneousContainer.cpp  HeterogeneousContainer.hpp  LegacyHeterogeneousContainer.hpp  System.hpp  TextureManager.cpp  TextureManager.hpp  TypeId.hpp  Types.cpp  main.cpp
src/Components/: AnimatedSprite.cpp  AnimatedSprite.hpp  Body.cpp  CMakeLists.txt  Sprite.cpp  Sprite.hpp  Transform.cpp  Transform.hpp
src/Engine/ECS/: Archetype.cpp  Archetype.hpp  ArchetypeGraph.cpp  ArchetypeGraph.hpp  CMakeLists.txt  ComponentManager.cpp  ComponentManager.hpp  Engine.cpp  Engine.hpp  System.hpp  TextureManager.cpp  TextureManager.hpp  Types.hpp
src/Engine/ECS/Archetype/: Archetype.cpp  Archetype.hpp  ArchetypeGraph.cpp  ArchetypeGraph.hpp  ArchetypeNode.cpp  ArchetypeNode.hpp  CMakeLists.txt
src/Engine/ECS/Component/: AnimatedSprite.cpp  AnimatedSprite.hpp  Body.hpp  CMakeLists.txt  Component.hpp  Sprite.cpp  Sprite.hpp  Transform.cpp  Transform.hpp
src/Engine/ECS/System/: BaseSystem.cpp  BaseSystem.hpp  CMakeLists.txt  MonoSystem.hpp  System.hpp
src/Engine/ECS/System/Implementation/: AnimatedSpriteSystem.cpp  AnimatedSpriteSystem.hpp  BasicCollisionSystem.cpp  BasicCollisionSystem.hpp  CMakeLists.txt  GravitySystem.cpp  GravitySystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp
src/Systems/: AnimatedSpriteSystem.cpp  AnimatedSpriteSystem.hpp  BasicCollisionSystem.cpp  BasicCollisionSystem.hpp  CMakeLists.txt  DummySystem.cpp  GravitySystem.cpp  GravitySystem.hpp  PhysicSystem.cpp  RenderSystem.cpp  RenderSystem.hpp  SpriteRenderSystem.cpp
